src/objects/Car_Parking_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Car_Type__c</fullName>
        <label>Car Type</label>
        <picklist>
            <picklistValues>
                <fullName>Big Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Earmarked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floor_Podium_No__c</fullName>
        <label>Floor/Podium No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Big_Car_Available__c</fullName>
        <label>No. Of Big Car Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Big_Car_Booked__c</fullName>
        <label>No Of Big Car Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Remaining_Big_Car__c</fullName>
        <formula>No_Of_Big_Car_Available__c - No_Of_Big_Car_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Remaining Big Car</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Remaining_Small_Car__c</fullName>
        <formula>No_Of_Small_Car_Available__c - No_Of_Small_Car_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Of Remaining Small Car</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Small_Car_Available__c</fullName>
        <label>No. Of Small Car Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Small_Car_Booked__c</fullName>
        <label>No Of Small Car Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Amount__c</fullName>
        <label>Parking Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Slot_No__c</fullName>
        <label>Parking Slot No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single - Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single- Dependent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puzzle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dependable-Stack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stack-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Wheeler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Car Parking</relationshipLabel>
        <relationshipName>Car_Parking_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Small_Car_Charge__c</fullName>
        <label>Small Car Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Floor_No__c</fullName>
        <label>Unique Floor No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Car Parking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Car Parking Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Parking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>